# AI-Finance-Assistant

./: .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
ai_platform/: README.md  date_range_resolver.py  simulation_clock.py
ai_platform/evaluation/: README.md  case_schema.py  cassette.py  loader.py  models.py  report.py  repository.py  run.py  runner.py  scoring.py
ai_platform/llm/: README.md  service.py
ai_platform/memory/: conversation_memory.py  entity_extraction.py  models.py  repository.py
ai_platform/orchestration/: README.md  chat_workflow.py  execution_planner.py  planner.py  prompt_builder.py  result_shaping.py
ai_platform/prompts/: README.md  planning_prompt.py  system_prompt.py
ai_platform/tool_registry/: executor.py  models.py  registry.py  repository.py  result_validator.py
ai_platform/workflow/: README.md  base.py
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3ab683f3086d_add_index_on_tool_executions_.py  4ab4ac1573db_create_bank_accounts_and_cash_.py  51417db8e8b6_create_finance_and_evaluation_schemas.py  5e3aaf1c3244_create_vendor_invoices_and_vendor_.py  5fbe2d93a633_create_request_traces_table.py  7d249154768c_create_tool_executions_table.py  8ad328fb9e86_create_evaluation_cases_evaluation_runs_.py  948c5fd90c8b_create_turn_summaries_table.py  README.md  a1c2e3f40011_extend_expense_claims_and_employees_for_v2.py  b2d3e4f50022_create_simulator_v2_entity_groups.py  c3e4f5a60033_create_company_policy_tables.py  daf36d10940a_create_application_schema.py  ea525685b6ed_index_tool_executions_request_id.py
backend/app/: main.py
backend/app/api/: chat.py  health.py  trace.py
backend/app/core/: config.py  errors.py  logging.py  tool_registry.py
backend/app/db/: base.py  session.py
backend/app/middleware/: request_context.py
backend/scripts/: run_demo.py
backend/tests/: conftest.py  fakes.py  test_ai_platform_package.py  test_anthropic_llm_service.py  test_app_tool_registry.py  test_cash_flow_service.py  test_cash_flow_tools_integration.py  test_cash_repository.py  test_chat_api.py  test_chat_eval.py  test_chat_workflow.py  test_config.py  test_consistency_check.py  test_consistency_check_ap_cash.py  test_conversation_memory.py  test_conversation_repository.py  test_cors.py  test_credit_service.py  test_credit_tools_integration.py  test_customer_repository.py  test_date_range_resolver.py  test_db_session.py  test_entity_extraction.py  test_errors.py  test_evaluation_baseline.py  test_evaluation_case_schema.py  test_evaluation_cassette.py  test_evaluation_cli.py  test_evaluation_loader.py  test_evaluation_report.py  test_evaluation_repository.py  test_evaluation_runner.py  test_evaluation_scoring.py  test_execution_planner.py  test_execution_planner_integration.py  test_expense_service.py  test_expense_tools_integration.py  test_finance_models.py  test_find_duplicate_invoices_integration.py  test_find_duplicate_invoices_tool.py  (+57 more)
docs/: DEMO.md  MVP-REPORT.md  PRD.md
docs/adr/: 0001-fastapi-as-orchestrator.md  0002-two-phase-llm-execution.md  0003-finance-simulator-over-real-erp.md  0004-tool-registry.md  0005-cassette-record-replay-evaluation.md  0006-out-of-scope-refusal-as-plan-branch.md  0007-request-traces-table.md  0008-simulation-clock.md
domains/: README.md
domains/finance/: README.md  simulation.py
evals/: baseline_core.json
evals/cassettes/: aging_report_basic__turn0__00191e7157d5.json  aging_report_basic__turn0__2d53efbf8ad0.json  aging_report_bucket_specific__turn0__00191e7157d5.json  aging_report_bucket_specific__turn0__2d53efbf8ad0.json  aging_report_explanation__turn0__00191e7157d5.json  aging_report_explanation__turn0__2d53efbf8ad0.json  ambiguous_customer_anchor__turn0__00191e7157d5.json  ambiguous_customer_anchor__turn0__2d53efbf8ad0.json  ambiguous_customer_anchor__turn1__00191e7157d5.json  ambiguous_customer_anchor__turn1__2d53efbf8ad0.json  ambiguous_customer_anchor_trigger__turn0__00191e7157d5.json  ambiguous_customer_anchor_trigger__turn0__2d53efbf8ad0.json  ambiguous_customer_cascade__turn0__2d53efbf8ad0.json  ambiguous_customer_cascade__turn0__910e5564d192.json  ambiguous_customer_titan__turn0__00191e7157d5.json  ambiguous_customer_titan__turn0__2d53efbf8ad0.json  ambiguous_how_much_do_we_owe__turn0__00191e7157d5.json  ambiguous_how_much_do_we_owe__turn0__2d53efbf8ad0.json  ambiguous_how_much_do_we_owe__turn0__52b1e816f1f4.json  ambiguous_show_invoices__turn0__00191e7157d5.json  ambiguous_show_invoices__turn0__2d53efbf8ad0.json  ambiguous_show_invoices__turn0__52b1e816f1f4.json  ambiguous_show_payments__turn0__2d53efbf8ad0.json  ambiguous_show_payments__turn0__52b1e816f1f4.json  ambiguous_show_payments__turn0__910e5564d192.json  assess_risk_direct_code__turn0__910e5564d192.json  (+155 more)
frontend/: .env.example  .eslintrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
platform/: README.md
(+214 files in other folders)
