[project]
name = "ai-platform"
version = "0.1.0"
description = "Reusable, domain-agnostic AI employee infrastructure"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0",
  "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_platform"]
