[project]
name = "ai-platform"
version = "0.1.0"
description = "Reusable, domain-agnostic AI employee infrastructure"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0",
  "anthropic>=0.40",
  "groq>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_platform"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ai_platform"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "N",   # pep8-naming
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "domains", "ai_platform"]
