[project]
name = "ai-employee-platform-backend"
version = "0.1.0"
description = "FastAPI orchestrator for the AI Employee Platform (Finance is the first domain)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests", "alembic"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "N",   # pep8-naming
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "domains", "ai_platform"]

[tool.ruff.lint.flake8-bugbear]
# B008 only exempts Depends() calls by default when the parameter's type
# annotation is an immutable builtin (e.g. `bool`). FastAPI's dependency
# injection pattern intentionally calls Depends() in argument defaults for
# arbitrary (non-builtin) types, so mark it explicitly immutable rather than
# scattering `# noqa: B008` across every endpoint.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
